--- a/Login/style-login.css
+++ b/Login/style-login.css
@@ -187,6 +187,8 @@ body {
     width: 80%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     display: none;
+    /* Adicionando posição relativa para permitir posicionamento absoluto do botão "Voltar" */
+    position: relative;
 }
 
 #loginDiv.active {
@@ -209,20 +211,10 @@ body {
 }
 
 #loginDiv button {
-    background-color: black;
+    background-color: rgb(160, 151, 151);
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
 }
 
-#closeBtn {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background: transparent;
-    border: none;
-    cursor: pointer;
-    font-size: 20px;
-    color: #6c757d;
-}
